--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -380,8 +380,8 @@ Case details
 
                                     <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                                         <div class="govuk-checkboxes__item">
-                                            <input class="govuk-checkboxes__input" id="venues7" name="priority" type="checkbox" value="Priority Hearing">
-                                            <label class="govuk-label govuk-checkboxes__label" for="venues7">
+                                            <input class="govuk-checkboxes__input" id="priority" name="priority" type="checkbox" >
+                                            <label class="govuk-label govuk-checkboxes__label" for="priority">
                                                 Priority
                                             </label>
                                         </div>
