some descriptive comment to aid handover

--- a/app/views/hearings/pages/venue.html
+++ b/app/views/hearings/pages/venue.html
@@ -673,6 +673,10 @@ Case details
 
 <script>
 
+    // Tediouse javascrip to see which radioboxes are check
+    // This saved them to a text string
+    // This text string is then reviewed by routes.js when the page is submitted
+    // The string is then played back on the venue page and the check your answers page
 
     function buildstring()
     {
