--- a/app/views/hearings/pages/channel.html
+++ b/app/views/hearings/pages/channel.html
@@ -14,7 +14,10 @@ Case details
 
                 <a href="#" class="govuk-back-link govuk-!-margin-bottom-6" onclick="goBack();">Back</a>
 
-                        <!-- <h2 class="govuk-heading-l">Channel</h2>-->
+                        <!--
+                            SSCS is apparently a strange service in the fact they have defult values for every field.
+                            The default will be a hearing in an actual court.  this is in person.
+                        -->
 
                         <form
                             name="aspnetForm"
