--- a/app/views/searchcases/transition/findcase.html
+++ b/app/views/searchcases/transition/findcase.html
@@ -15,7 +15,7 @@ Case details
 
     <div class="hmcts-page-heading" style="margin-bottom: 20px;">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-xl">Search</h1>
+               <h1 class="govuk-heading-xl">Find case</h1>
           </div>
     </div>
 
