updateds to find case and case list for duel running and solicitors

--- a/app/views/searchcases/transition/findcase.html
+++ b/app/views/searchcases/transition/findcase.html
@@ -22,8 +22,11 @@ Case details
 
     <div style="display: flex; flex-wrap:wrap;">
         <button class="govuk-button govuk-button--secondary govuk-!-margin-top-3 " data-module="govuk-button">
-              Hide Filter
+            Hide filter
         </button>
+        <p style="margin: 24px;">
+            <a href="caselist">Case list</a>
+        </p>
     </div>
 
 
